# -AI

./: .gitignore  AGENTS.md  DEMO_OUTPUT.txt  IMPLEMENTATION_SUMMARY.md  README.md  SETUP.md  acceptance_output.txt  pyproject.toml  setup.py
docs/: EVIDENCE.md  STARX_RUNTIME_SPEC.md
docs/evidence/: acceptance_report_latest.json
docs/evidence/example_failure/: acceptance_report_20260124_171105.json  diff_required_files_exist_20260124_171105.txt  failure_required_files_exist_20260124_171105.json
starx/: __init__.py  __main__.py  cli.py  hashing.py  models.py  serialization.py
starx/config/: __init__.py  schema.yaml
starx/core/: __init__.py
starx/core/logging/: __init__.py  log_contract.py
starx/tools/: __init__.py
starx/tools/evidence/: __init__.py  collector.py  generator.py  models.py
tests/: test_imports.py
